crates/gridwell-writer-html/tests/snapshots/snapshots__snapshot_footnote_single.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: "render(\"minimal/footnote_single.json\")"
---
<div class="gw_container">
  <table class="gw_table">
    <thead>
      <tr>
        <th scope="col">Item</th>
        <th scope="col">Price</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Widget</td>
        <td>
          $9.99<sup><a href="#fn1">1</a></sup>
        </td>
      </tr>
      <tr>
        <td>Gadget</td>
        <td>$19.99</td>
      </tr>
    </tbody>
  </table>
  <div class="gw_footer">
    <div class="gw_footnotes">
      <p id="fn1" >
        <sup>1</sup> Price valid through end of quarter.
      </p>
    </div>
  </div>
</div>
