crates/gridwell-writer-html/tests/snapshots/snapshots__snapshot_minimal_1x1.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: "render(\"minimal/minimal_1x1.json\")"
---
<div class="gw_container">
  <table class="gw_table">
    <thead>
      <tr>
        <th scope="col">Value</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Hello</td>
      </tr>
    </tbody>
  </table>
</div>
