crates/gridwell-writer-html/tests/snapshots/snapshots__snapshot_minimal_no_header.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: "render(\"minimal/minimal_no_header.json\")"
---
<div class="gw_container">
  <table class="gw_table">
    <thead>
      <tr>
        <th scope="col">Name</th>
        <th scope="col">Score</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Alice</td>
        <td>95</td>
      </tr>
      <tr>
        <td>Bob</td>
        <td>87</td>
      </tr>
    </tbody>
  </table>
</div>
