crates/gridwell-writer-html/tests/snapshots/snapshots__snapshot_unicode_cjk.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: "render(\"minimal/unicode_cjk.json\")"
---
<div class="gw_container">
  <div role="heading" aria-level="1">
    世界の都市
  </div>
  <table class="gw_table">
    <thead>
      <tr>
        <th scope="col">都市</th>
        <th scope="col">人口 (万人)</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>東京</td>
        <td>1,396</td>
      </tr>
      <tr>
        <td>大阪</td>
        <td>884</td>
      </tr>
    </tbody>
  </table>
</div>
