crates/gridwell-writer-html/tests/snapshots/snapshots__source-notes.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_left { text-align: left }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Metric</th>
        <th class="gw__al_left">Value</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Users</td>
        <td>1,024</td>
      </tr>
    </tbody>
  </table>
  <div class="gw_footer">
    <div class="gw_source_notes">
      <p>
        Source: internal analytics.
      </p>
      <p>
        Collected June 2026.
      </p>
    </div>
  </div>
</div>
