crates/gridwell-writer-html/tests/snapshots/snapshots__striping-basic.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw__c0 { background-color: rgba(128, 128, 128, 0.051) }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th>A</th>
        <th>B</th>
        <th>C</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>1</td>
        <td>2</td>
        <td>3</td>
      </tr>
      <tr>
        <td class="gw__c0">4</td>
        <td class="gw__c0">5</td>
        <td class="gw__c0">6</td>
      </tr>
      <tr>
        <td>7</td>
        <td>8</td>
        <td>9</td>
      </tr>
      <tr>
        <td class="gw__c0">10</td>
        <td class="gw__c0">11</td>
        <td class="gw__c0">12</td>
      </tr>
    </tbody>
  </table>
</div>
