crates/gridwell-writer-html/tests/snapshots/snapshots__style-composition.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_base { font-weight: bold; color: #2C3E50 }
    .gw_emphasis { font-weight: bold; color: #2C3E50; background-color: #F1C40F }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th>Key</th>
        <th>Value</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>normal</td>
        <td>42</td>
      </tr>
      <tr>
        <td class="gw_emphasis">special</td>
        <td>99</td>
      </tr>
    </tbody>
  </table>
</div>
