crates/gridwell-writer-html/tests/snapshots/snapshots__styled-text.snap
---
source: crates/gridwell-writer-html/tests/snapshots.rs
expression: out
---
<div class="gw_container">
  <style>
    .gw_table .gw__al_left { text-align: left }
    .gw_em { font-style: italic; color: #8E44AD }
  </style>
  <table class="gw_table">
    <thead>
      <tr>
        <th class="gw__al_left">Term</th>
        <th class="gw__al_left">Note</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>Rust</td>
        <td>
          A <span class="gw_em">systems</span> language.
        </td>
      </tr>
    </tbody>
  </table>
</div>
